--- a/Calculadora.Tests/Calculadora.Tests.csproj
+++ b/Calculadora.Tests/Calculadora.Tests.csproj
@@ -46,6 +46,7 @@
       <HintPath>..\packages\MSTest.TestFramework.2.0.0\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -60,6 +61,9 @@
     <Compile Include="ViewModel\CalculadoraVMTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="operaciones.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
